# Enhanced-World-Model

./: .gitignore  .gitmodules  .pre-commit-config.yaml  COLAB_GUIDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  TODO.md  pyproject.toml  test_controller_shapes.py  test_world_model.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
notebooks/: train_colab.ipynb
runs/Oct01_15-36-49_DESKTOP-KT2578F/: events.out.tfevents.1759325809.DESKTOP-KT2578F.4419.0
runs/Oct01_16-38-52_DESKTOP-KT2578F/: events.out.tfevents.1759329532.DESKTOP-KT2578F.22049.0
runs/Oct01_16-41-37_DESKTOP-KT2578F/: events.out.tfevents.1759329697.DESKTOP-KT2578F.23406.0
runs/Oct01_16-43-39_DESKTOP-KT2578F/: events.out.tfevents.1759329819.DESKTOP-KT2578F.24208.0
runs/Oct01_16-44-03_DESKTOP-KT2578F/: events.out.tfevents.1759329843.DESKTOP-KT2578F.24428.0
runs/Oct01_16-54-59_DESKTOP-KT2578F/: events.out.tfevents.1759330499.DESKTOP-KT2578F.28809.0
runs/Oct01_16-56-36_DESKTOP-KT2578F/: events.out.tfevents.1759330596.DESKTOP-KT2578F.29744.0
runs/Oct01_16-57-26_DESKTOP-KT2578F/: events.out.tfevents.1759330646.DESKTOP-KT2578F.30357.0
saved_models/: README.md
src/: ControllerModel.py  Model.py  VisionModel.py  WorldModel.py  buffer.py  inference.py  main.py  manual_control.py  pretrain.py  train.py  train_a2c.py
src/controller/: ContinuousModelPredictiveController.py  ControllerModel.py  DeepContinuousController.py  DeepDiscreteController.py  DiscreteModelPredictiveController.py  ImprovedContinuousController.py  ImprovedDiscreteController.py  ModelPredictiveControl.py  ModelPredictiveController.py  StochasticController.py  __init__.py
src/interface/: app.py  interface.py  main.py
src/memory/: CPC.py  LSTMMemory.py  MemoryModel.py  TemporalTransformer.py  TemporalTransformerXCPC.py  __init__.py
src/ppo/: __init__.py  buffer.py  train_ppo.py
src/reward_predictor/: DensePredictor.py  LinearPredictor.py  __init__.py
src/utils/: cli.py  colors.py  gym_tools.py  hardware.py  logger.py  model.py  registry.py  tags.py
src/vision/: ContrastiveEncoder.py  Identity.py  JEPA.py  VQ-VAE.py  VQ_VAE.py  VisionModel.py  __init__.py
tests/: conftest.py  test_controller.py  test_main.py  test_memory.py  test_vision.py
utils/: registry.py
