[project]
name = "Enhanced-World-Model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12.11"
dependencies = [
    "gymnasium[all]>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy>=2.3.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.22.1",
    "gradio>=4.39.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu130"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.interface.*"
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/.env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
