[project]
name = "Enhanced-World-Model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12.11"
dependencies = [
    "gymnasium[all]>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy>=2.3.1",
    "tensorboard>=2.20.0",
    "gradio>=4.39.0",
    # Platform-specific PyTorch installations
    "torch>=2.9.0; sys_platform == 'darwin'",
    "torchvision>=0.22.1; sys_platform == 'darwin'",
    "torch>=2.8.0; sys_platform == 'win32'",
    "torchvision>=0.22.1; sys_platform == 'win32'",
    "torch>=2.8.0; sys_platform == 'linux'",
    "torchvision>=0.22.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu130"]
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.interface.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".eggs",
    ".git",
    ".venv",
    ".env",
    "build",
    "dist",
    "src/interface/Gymnasium",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (let formatter handle it)
    "F401",  # Unused imports in __init__.py (re-exports)
    "B008",  # Function call in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/.env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
